# accounts-state

./: Cargo.toml  README.md  deny.toml
examples/: generate_transactions.rs
src/: amount.rs  csv.rs  errors.rs  lib.rs  main.rs
src/account/: balance.rs  clinet_account.rs  mod.rs  transactions.rs
tests/: intergrate.rs  main.rs
tests/csvs/: e.csv  in1.csv  in2.csv  out1.csv  out2.csv
