[package]
authors = ["Sylwester Rąpała <sylwesterrapala@outlook.com>"]
description = "Simple toy payments engine for csv input"
name = "accounts-state"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
serde = {version = "1.0", features = ["derive"]}
csv-async = {version = "1.2",features = ["tokio"] }

rust_decimal = { version = "1.21", features = ["serde-with-str"] }
rust_decimal_macros = "1.21"

tokio = { version = "1.16", features = ["fs", "sync", "io-util", "rt", "rt-multi-thread", "macros",
"io-std"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3" }

anyhow = { version = "1.0" }
thiserror = { version = "1.0" }

[dev-dependencies]
assert_cmd = "2.0"
csv = "1.1"
